# RAG-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  run-rag-cli.sh  run-rag-ui.sh
docs/: TH_MailboxDirectory.template.md  TH_folders.template.md  architecture.md  context-graph-2.0-spec.md  context-graph-phase-a-plan.md  data-model.md  graph-views.md  importer-upserter.md  phase-1-implementation-plan.md  production-readiness.md  thunderbird-import-phase-2-plan.md
src/rag_assistant/: __init__.py  backup.py  chunking.py  cli.py  config.py  context_graph_component.py  execution_dnd_component.py  history.py  index_store.py  ingest.py  kanban_dnd_component.py  launch.py  loader.py  markdown_editor_component.py  models.py  obsidian_importer.py  planning_layout.py  proposals.py  records.py  search.py  streamlit_app.py  thunderbird_importer.py  upserter.py  vector_store.py
src/rag_assistant/context_graph_component/: index.html
src/rag_assistant/execution_dnd_component/: index.html
src/rag_assistant/kanban_dnd_component/: index.html
src/rag_assistant/markdown_editor_component/: index.html
