[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-asszisztens"
version = "0.2.0"
description = "Personal RAG assistant foundation for local knowledge management."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit",
  "chromadb",
  "langchain-ollama",
]

[project.scripts]
rag = "rag_assistant.cli:main"
rag-ui = "rag_assistant.launch:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
